# vontobel

./: Cargo.toml  README.md
data/: symbols_valid_meta.csv
src/: main.rs  models.rs  response.rs
src/performance_figures/: endpoints.rs  mod.rs  returns.rs
src/prices/: data_access.rs  endpoints.rs  mod.rs
