[package]
name = "prices"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
env_logger = "0.11.3"
reqwest = { version = "0.12.5", features = ["json"] } 
serde = { version = "1.0.203", features = ["derive"] } 
serde_json = "1.0.120"
